// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search Results component When the component is rendered Should match snapshot - empty state 1`] = `
<div
  className="results-container"
>
  <h2>
    Search results:
  </h2>
  <div
    className="results-content"
  >
    <div
      className="no-results-container"
    >
      <h3>
        No results found!
      </h3>
      <img
        animationData={
          Object {
            "assets": Array [],
            "ddd": 0,
            "fr": 29.9700012207031,
            "h": 150,
            "ip": 0,
            "layers": Array [
              Object {
                "ao": 0,
                "bm": 0,
                "ddd": 0,
                "ind": 1,
                "ip": 0,
                "ks": Object {
                  "a": Object {
                    "a": 0,
                    "ix": 1,
                    "k": Array [
                      0,
                      0,
                      0,
                    ],
                  },
                  "o": Object {
                    "a": 0,
                    "ix": 11,
                    "k": 100,
                  },
                  "p": Object {
                    "a": 0,
                    "ix": 2,
                    "k": Array [
                      -0.776,
                      -9.5,
                      0,
                    ],
                  },
                  "r": Object {
                    "a": 0,
                    "ix": 10,
                    "k": 0,
                  },
                  "s": Object {
                    "a": 0,
                    "ix": 6,
                    "k": Array [
                      100,
                      100,
                      100,
                    ],
                  },
                },
                "nm": "bouche",
                "op": 90.0000036657751,
                "parent": 3,
                "shapes": Array [
                  Object {
                    "bm": 0,
                    "cix": 2,
                    "hd": false,
                    "it": Array [
                      Object {
                        "d": 1,
                        "hd": false,
                        "mn": "ADBE Vector Shape - Rect",
                        "nm": "Tracé rectangulaire 1",
                        "p": Object {
                          "a": 0,
                          "ix": 3,
                          "k": Array [
                            0,
                            0,
                          ],
                        },
                        "r": Object {
                          "a": 0,
                          "ix": 4,
                          "k": 20,
                        },
                        "s": Object {
                          "a": 0,
                          "ix": 2,
                          "k": Array [
                            30,
                            3,
                          ],
                        },
                        "ty": "rc",
                      },
                      Object {
                        "bm": 0,
                        "c": Object {
                          "a": 0,
                          "ix": 4,
                          "k": Array [
                            0.145098045468,
                            0.137254908681,
                            0.137254908681,
                            1,
                          ],
                        },
                        "hd": false,
                        "mn": "ADBE Vector Graphic - Fill",
                        "nm": "Fond 1",
                        "o": Object {
                          "a": 0,
                          "ix": 5,
                          "k": 100,
                        },
                        "r": 1,
                        "ty": "fl",
                      },
                      Object {
                        "a": Object {
                          "a": 0,
                          "ix": 1,
                          "k": Array [
                            0,
                            0,
                          ],
                        },
                        "nm": "Transformer ",
                        "o": Object {
                          "a": 0,
                          "ix": 7,
                          "k": 100,
                        },
                        "p": Object {
                          "a": 0,
                          "ix": 2,
                          "k": Array [
                            -1.087,
                            24.637,
                          ],
                        },
                        "r": Object {
                          "a": 0,
                          "ix": 6,
                          "k": 0,
                        },
                        "s": Object {
                          "a": 0,
                          "ix": 3,
                          "k": Array [
                            100,
                            100,
                          ],
                        },
                        "sa": Object {
                          "a": 0,
                          "ix": 5,
                          "k": 0,
                        },
                        "sk": Object {
                          "a": 0,
                          "ix": 4,
                          "k": 0,
                        },
                        "ty": "tr",
                      },
                    ],
                    "ix": 1,
                    "mn": "ADBE Vector Group",
                    "nm": "Rectangle 1",
                    "np": 2,
                    "ty": "gr",
                  },
                ],
                "sr": 1,
                "st": 0,
                "ty": 4,
              },
              Object {
                "ao": 0,
                "bm": 0,
                "ddd": 0,
                "ind": 2,
                "ip": 0,
                "ks": Object {
                  "a": Object {
                    "a": 0,
                    "ix": 1,
                    "k": Array [
                      0,
                      0,
                      0,
                    ],
                  },
                  "o": Object {
                    "a": 0,
                    "ix": 11,
                    "k": 100,
                  },
                  "p": Object {
                    "a": 0,
                    "ix": 2,
                    "k": Array [
                      35,
                      0,
                      0,
                    ],
                  },
                  "r": Object {
                    "a": 0,
                    "ix": 10,
                    "k": 0,
                  },
                  "s": Object {
                    "a": 0,
                    "ix": 6,
                    "k": Array [
                      100,
                      100,
                      100,
                    ],
                  },
                },
                "nm": "oeil_droit",
                "op": 90.0000036657751,
                "parent": 3,
                "shapes": Array [
                  Object {
                    "bm": 0,
                    "cix": 2,
                    "hd": false,
                    "it": Array [
                      Object {
                        "d": 1,
                        "hd": false,
                        "mn": "ADBE Vector Shape - Ellipse",
                        "nm": "Tracé d'ellipse 1",
                        "p": Object {
                          "a": 0,
                          "ix": 3,
                          "k": Array [
                            0,
                            0,
                          ],
                        },
                        "s": Object {
                          "a": 1,
                          "ix": 2,
                          "k": Array [
                            Object {
                              "i": Object {
                                "x": Array [
                                  0.667,
                                  0.667,
                                ],
                                "y": Array [
                                  1,
                                  1,
                                ],
                              },
                              "o": Object {
                                "x": Array [
                                  0.333,
                                  0.333,
                                ],
                                "y": Array [
                                  0,
                                  0,
                                ],
                              },
                              "s": Array [
                                10,
                                10,
                              ],
                              "t": 0,
                            },
                            Object {
                              "i": Object {
                                "x": Array [
                                  0.667,
                                  0.667,
                                ],
                                "y": Array [
                                  1,
                                  1,
                                ],
                              },
                              "o": Object {
                                "x": Array [
                                  0.333,
                                  0.333,
                                ],
                                "y": Array [
                                  0,
                                  0,
                                ],
                              },
                              "s": Array [
                                10,
                                0,
                              ],
                              "t": 3,
                            },
                            Object {
                              "i": Object {
                                "x": Array [
                                  0.667,
                                  0.667,
                                ],
                                "y": Array [
                                  1,
                                  1,
                                ],
                              },
                              "o": Object {
                                "x": Array [
                                  0.333,
                                  0.333,
                                ],
                                "y": Array [
                                  0,
                                  0,
                                ],
                              },
                              "s": Array [
                                10,
                                10,
                              ],
                              "t": 6,
                            },
                            Object {
                              "i": Object {
                                "x": Array [
                                  0.667,
                                  0.667,
                                ],
                                "y": Array [
                                  1,
                                  1,
                                ],
                              },
                              "o": Object {
                                "x": Array [
                                  0.333,
                                  0.333,
                                ],
                                "y": Array [
                                  0,
                                  0,
                                ],
                              },
                              "s": Array [
                                10,
                                0,
                              ],
                              "t": 9,
                            },
                            Object {
                              "s": Array [
                                10,
                                10,
                              ],
                              "t": 12.00000048877,
                            },
                          ],
                        },
                        "ty": "el",
                      },
                      Object {
                        "bm": 0,
                        "c": Object {
                          "a": 0,
                          "ix": 4,
                          "k": Array [
                            0.145098045468,
                            0.137254908681,
                            0.137254908681,
                            1,
                          ],
                        },
                        "hd": false,
                        "mn": "ADBE Vector Graphic - Fill",
                        "nm": "Fond 1",
                        "o": Object {
                          "a": 0,
                          "ix": 5,
                          "k": 100,
                        },
                        "r": 1,
                        "ty": "fl",
                      },
                      Object {
                        "a": Object {
                          "a": 0,
                          "ix": 1,
                          "k": Array [
                            0,
                            0,
                          ],
                        },
                        "nm": "Transformer ",
                        "o": Object {
                          "a": 0,
                          "ix": 7,
                          "k": 100,
                        },
                        "p": Object {
                          "a": 0,
                          "ix": 2,
                          "k": Array [
                            -19.363,
                            -14.808,
                          ],
                        },
                        "r": Object {
                          "a": 0,
                          "ix": 6,
                          "k": 0,
                        },
                        "s": Object {
                          "a": 0,
                          "ix": 3,
                          "k": Array [
                            100,
                            100,
                          ],
                        },
                        "sa": Object {
                          "a": 0,
                          "ix": 5,
                          "k": 0,
                        },
                        "sk": Object {
                          "a": 0,
                          "ix": 4,
                          "k": 0,
                        },
                        "ty": "tr",
                      },
                    ],
                    "ix": 1,
                    "mn": "ADBE Vector Group",
                    "nm": "Ellipse 1",
                    "np": 2,
                    "ty": "gr",
                  },
                ],
                "sr": 1,
                "st": 0,
                "ty": 4,
              },
              Object {
                "ao": 0,
                "bm": 0,
                "ddd": 0,
                "ind": 3,
                "ip": 0,
                "ks": Object {
                  "a": Object {
                    "a": 0,
                    "ix": 1,
                    "k": Array [
                      0,
                      0,
                      0,
                    ],
                  },
                  "o": Object {
                    "a": 0,
                    "ix": 11,
                    "k": 100,
                  },
                  "p": Object {
                    "a": 1,
                    "ix": 2,
                    "k": Array [
                      Object {
                        "i": Object {
                          "x": 0.667,
                          "y": 1,
                        },
                        "o": Object {
                          "x": 0.333,
                          "y": 0,
                        },
                        "s": Array [
                          76.863,
                          81.5,
                          0,
                        ],
                        "t": 12,
                        "ti": Array [
                          1.667,
                          1.667,
                          0,
                        ],
                        "to": Array [
                          -1.667,
                          -1.667,
                          0,
                        ],
                      },
                      Object {
                        "i": Object {
                          "x": 0.667,
                          "y": 0.667,
                        },
                        "o": Object {
                          "x": 0.333,
                          "y": 0.333,
                        },
                        "s": Array [
                          66.863,
                          71.5,
                          0,
                        ],
                        "t": 18,
                        "ti": Array [
                          0,
                          0,
                          0,
                        ],
                        "to": Array [
                          0,
                          0,
                          0,
                        ],
                      },
                      Object {
                        "i": Object {
                          "x": 0.667,
                          "y": 1,
                        },
                        "o": Object {
                          "x": 0.333,
                          "y": 0,
                        },
                        "s": Array [
                          66.863,
                          71.5,
                          0,
                        ],
                        "t": 22,
                        "ti": Array [
                          -3.333,
                          -3.333,
                          0,
                        ],
                        "to": Array [
                          3.333,
                          3.333,
                          0,
                        ],
                      },
                      Object {
                        "i": Object {
                          "x": 0.667,
                          "y": 0.667,
                        },
                        "o": Object {
                          "x": 0.333,
                          "y": 0.333,
                        },
                        "s": Array [
                          86.863,
                          91.5,
                          0,
                        ],
                        "t": 28,
                        "ti": Array [
                          0,
                          0,
                          0,
                        ],
                        "to": Array [
                          0,
                          0,
                          0,
                        ],
                      },
                      Object {
                        "i": Object {
                          "x": 0.667,
                          "y": 1,
                        },
                        "o": Object {
                          "x": 0.333,
                          "y": 0,
                        },
                        "s": Array [
                          86.863,
                          91.5,
                          0,
                        ],
                        "t": 32,
                        "ti": Array [
                          3.333,
                          0,
                          0,
                        ],
                        "to": Array [
                          -3.333,
                          0,
                          0,
                        ],
                      },
                      Object {
                        "i": Object {
                          "x": 0.667,
                          "y": 0.667,
                        },
                        "o": Object {
                          "x": 0.333,
                          "y": 0.333,
                        },
                        "s": Array [
                          66.863,
                          91.5,
                          0,
                        ],
                        "t": 40,
                        "ti": Array [
                          0,
                          0,
                          0,
                        ],
                        "to": Array [
                          0,
                          0,
                          0,
                        ],
                      },
                      Object {
                        "i": Object {
                          "x": 0.667,
                          "y": 1,
                        },
                        "o": Object {
                          "x": 0.333,
                          "y": 0,
                        },
                        "s": Array [
                          66.863,
                          91.5,
                          0,
                        ],
                        "t": 44,
                        "ti": Array [
                          -3.333,
                          3.333,
                          0,
                        ],
                        "to": Array [
                          3.333,
                          -3.333,
                          0,
                        ],
                      },
                      Object {
                        "i": Object {
                          "x": 0.667,
                          "y": 0.667,
                        },
                        "o": Object {
                          "x": 0.333,
                          "y": 0.333,
                        },
                        "s": Array [
                          86.863,
                          71.5,
                          0,
                        ],
                        "t": 50,
                        "ti": Array [
                          0,
                          0,
                          0,
                        ],
                        "to": Array [
                          0,
                          0,
                          0,
                        ],
                      },
                      Object {
                        "i": Object {
                          "x": 0.667,
                          "y": 1,
                        },
                        "o": Object {
                          "x": 0.333,
                          "y": 0,
                        },
                        "s": Array [
                          86.863,
                          71.5,
                          0,
                        ],
                        "t": 55,
                        "ti": Array [
                          1.667,
                          -1.667,
                          0,
                        ],
                        "to": Array [
                          -1.667,
                          1.667,
                          0,
                        ],
                      },
                      Object {
                        "s": Array [
                          76.863,
                          81.5,
                          0,
                        ],
                        "t": 60.0000024438501,
                      },
                    ],
                  },
                  "r": Object {
                    "a": 0,
                    "ix": 10,
                    "k": 0,
                  },
                  "s": Object {
                    "a": 0,
                    "ix": 6,
                    "k": Array [
                      100,
                      100,
                      100,
                    ],
                  },
                },
                "nm": "oeil_gauche",
                "op": 90.0000036657751,
                "shapes": Array [
                  Object {
                    "bm": 0,
                    "cix": 2,
                    "hd": false,
                    "it": Array [
                      Object {
                        "d": 1,
                        "hd": false,
                        "mn": "ADBE Vector Shape - Ellipse",
                        "nm": "Tracé d'ellipse 1",
                        "p": Object {
                          "a": 0,
                          "ix": 3,
                          "k": Array [
                            0,
                            0,
                          ],
                        },
                        "s": Object {
                          "a": 1,
                          "ix": 2,
                          "k": Array [
                            Object {
                              "i": Object {
                                "x": Array [
                                  0.833,
                                  0.833,
                                ],
                                "y": Array [
                                  0.833,
                                  0.833,
                                ],
                              },
                              "o": Object {
                                "x": Array [
                                  0.167,
                                  0.167,
                                ],
                                "y": Array [
                                  0.167,
                                  0.167,
                                ],
                              },
                              "s": Array [
                                10,
                                10,
                              ],
                              "t": 0,
                            },
                            Object {
                              "i": Object {
                                "x": Array [
                                  0.833,
                                  0.833,
                                ],
                                "y": Array [
                                  0.833,
                                  0.833,
                                ],
                              },
                              "o": Object {
                                "x": Array [
                                  0.167,
                                  0.167,
                                ],
                                "y": Array [
                                  0.167,
                                  0.167,
                                ],
                              },
                              "s": Array [
                                10,
                                0,
                              ],
                              "t": 3,
                            },
                            Object {
                              "i": Object {
                                "x": Array [
                                  0.833,
                                  0.833,
                                ],
                                "y": Array [
                                  0.833,
                                  0.833,
                                ],
                              },
                              "o": Object {
                                "x": Array [
                                  0.167,
                                  0.167,
                                ],
                                "y": Array [
                                  0.167,
                                  0.167,
                                ],
                              },
                              "s": Array [
                                10,
                                10,
                              ],
                              "t": 6,
                            },
                            Object {
                              "i": Object {
                                "x": Array [
                                  0.833,
                                  0.833,
                                ],
                                "y": Array [
                                  0.833,
                                  0.833,
                                ],
                              },
                              "o": Object {
                                "x": Array [
                                  0.167,
                                  0.167,
                                ],
                                "y": Array [
                                  0.167,
                                  0.167,
                                ],
                              },
                              "s": Array [
                                10,
                                0,
                              ],
                              "t": 9,
                            },
                            Object {
                              "s": Array [
                                10,
                                10,
                              ],
                              "t": 12.00000048877,
                            },
                          ],
                          "x": "var $bm_rt;
$bm_rt = content('Ellipse 1').content('Trac\\\\xe9 d\\\\'ellipse 1').size;",
                        },
                        "ty": "el",
                      },
                      Object {
                        "bm": 0,
                        "c": Object {
                          "a": 0,
                          "ix": 4,
                          "k": Array [
                            0.145098045468,
                            0.137254908681,
                            0.137254908681,
                            1,
                          ],
                        },
                        "hd": false,
                        "mn": "ADBE Vector Graphic - Fill",
                        "nm": "Fond 1",
                        "o": Object {
                          "a": 0,
                          "ix": 5,
                          "k": 100,
                        },
                        "r": 1,
                        "ty": "fl",
                      },
                      Object {
                        "a": Object {
                          "a": 0,
                          "ix": 1,
                          "k": Array [
                            0,
                            0,
                          ],
                        },
                        "nm": "Transformer ",
                        "o": Object {
                          "a": 0,
                          "ix": 7,
                          "k": 100,
                        },
                        "p": Object {
                          "a": 0,
                          "ix": 2,
                          "k": Array [
                            -19.363,
                            -14.808,
                          ],
                        },
                        "r": Object {
                          "a": 0,
                          "ix": 6,
                          "k": 0,
                        },
                        "s": Object {
                          "a": 0,
                          "ix": 3,
                          "k": Array [
                            100,
                            100,
                          ],
                        },
                        "sa": Object {
                          "a": 0,
                          "ix": 5,
                          "k": 0,
                        },
                        "sk": Object {
                          "a": 0,
                          "ix": 4,
                          "k": 0,
                        },
                        "ty": "tr",
                      },
                    ],
                    "ix": 1,
                    "mn": "ADBE Vector Group",
                    "nm": "Ellipse 1",
                    "np": 2,
                    "ty": "gr",
                  },
                ],
                "sr": 1,
                "st": 0,
                "ty": 4,
              },
              Object {
                "ao": 0,
                "bm": 0,
                "ddd": 0,
                "ind": 4,
                "ip": 0,
                "ks": Object {
                  "a": Object {
                    "a": 0,
                    "ix": 1,
                    "k": Array [
                      0,
                      0,
                      0,
                    ],
                  },
                  "o": Object {
                    "a": 0,
                    "ix": 11,
                    "k": 100,
                  },
                  "p": Object {
                    "a": 1,
                    "ix": 2,
                    "k": Array [
                      Object {
                        "i": Object {
                          "x": 0.667,
                          "y": 1,
                        },
                        "o": Object {
                          "x": 0.333,
                          "y": 0,
                        },
                        "s": Array [
                          77.04,
                          73.341,
                          0,
                        ],
                        "t": 12,
                        "ti": Array [
                          0.5,
                          0.5,
                          0,
                        ],
                        "to": Array [
                          -0.5,
                          -0.5,
                          0,
                        ],
                      },
                      Object {
                        "i": Object {
                          "x": 0.667,
                          "y": 0.667,
                        },
                        "o": Object {
                          "x": 0.333,
                          "y": 0.333,
                        },
                        "s": Array [
                          74.04,
                          70.341,
                          0,
                        ],
                        "t": 18,
                        "ti": Array [
                          0,
                          0,
                          0,
                        ],
                        "to": Array [
                          0,
                          0,
                          0,
                        ],
                      },
                      Object {
                        "i": Object {
                          "x": 0.667,
                          "y": 1,
                        },
                        "o": Object {
                          "x": 0.333,
                          "y": 0,
                        },
                        "s": Array [
                          74.04,
                          70.341,
                          0,
                        ],
                        "t": 22,
                        "ti": Array [
                          -1,
                          -1,
                          0,
                        ],
                        "to": Array [
                          1,
                          1,
                          0,
                        ],
                      },
                      Object {
                        "i": Object {
                          "x": 0.667,
                          "y": 0.667,
                        },
                        "o": Object {
                          "x": 0.333,
                          "y": 0.333,
                        },
                        "s": Array [
                          80.04,
                          76.341,
                          0,
                        ],
                        "t": 28,
                        "ti": Array [
                          0,
                          0,
                          0,
                        ],
                        "to": Array [
                          0,
                          0,
                          0,
                        ],
                      },
                      Object {
                        "i": Object {
                          "x": 0.667,
                          "y": 1,
                        },
                        "o": Object {
                          "x": 0.333,
                          "y": 0,
                        },
                        "s": Array [
                          80.04,
                          76.341,
                          0,
                        ],
                        "t": 32,
                        "ti": Array [
                          1,
                          0,
                          0,
                        ],
                        "to": Array [
                          -1,
                          0,
                          0,
                        ],
                      },
                      Object {
                        "i": Object {
                          "x": 0.667,
                          "y": 0.667,
                        },
                        "o": Object {
                          "x": 0.333,
                          "y": 0.333,
                        },
                        "s": Array [
                          74.04,
                          76.341,
                          0,
                        ],
                        "t": 40,
                        "ti": Array [
                          0,
                          0,
                          0,
                        ],
                        "to": Array [
                          0,
                          0,
                          0,
                        ],
                      },
                      Object {
                        "i": Object {
                          "x": 0.667,
                          "y": 1,
                        },
                        "o": Object {
                          "x": 0.333,
                          "y": 0,
                        },
                        "s": Array [
                          74.04,
                          76.341,
                          0,
                        ],
                        "t": 44,
                        "ti": Array [
                          -1,
                          1,
                          0,
                        ],
                        "to": Array [
                          1,
                          -1,
                          0,
                        ],
                      },
                      Object {
                        "i": Object {
                          "x": 0.667,
                          "y": 0.667,
                        },
                        "o": Object {
                          "x": 0.333,
                          "y": 0.333,
                        },
                        "s": Array [
                          80.04,
                          70.341,
                          0,
                        ],
                        "t": 50,
                        "ti": Array [
                          0,
                          0,
                          0,
                        ],
                        "to": Array [
                          0,
                          0,
                          0,
                        ],
                      },
                      Object {
                        "i": Object {
                          "x": 0.667,
                          "y": 1,
                        },
                        "o": Object {
                          "x": 0.333,
                          "y": 0,
                        },
                        "s": Array [
                          80.04,
                          70.341,
                          0,
                        ],
                        "t": 55,
                        "ti": Array [
                          0.5,
                          -0.5,
                          0,
                        ],
                        "to": Array [
                          -0.5,
                          0.5,
                          0,
                        ],
                      },
                      Object {
                        "s": Array [
                          77.04,
                          73.341,
                          0,
                        ],
                        "t": 60.0000024438501,
                      },
                    ],
                  },
                  "r": Object {
                    "a": 0,
                    "ix": 10,
                    "k": 0,
                  },
                  "s": Object {
                    "a": 0,
                    "ix": 6,
                    "k": Array [
                      100,
                      100,
                      100,
                    ],
                  },
                },
                "nm": "tete",
                "op": 90.0000036657751,
                "shapes": Array [
                  Object {
                    "bm": 0,
                    "cix": 2,
                    "hd": false,
                    "it": Array [
                      Object {
                        "d": 1,
                        "hd": false,
                        "mn": "ADBE Vector Shape - Ellipse",
                        "nm": "Tracé d'ellipse 1",
                        "p": Object {
                          "a": 0,
                          "ix": 3,
                          "k": Array [
                            0,
                            0,
                          ],
                        },
                        "s": Object {
                          "a": 0,
                          "ix": 2,
                          "k": Array [
                            80,
                            80,
                          ],
                        },
                        "ty": "el",
                      },
                      Object {
                        "bm": 0,
                        "c": Object {
                          "a": 0,
                          "ix": 4,
                          "k": Array [
                            1,
                            0.831372559071,
                            0.352941185236,
                            1,
                          ],
                        },
                        "hd": false,
                        "mn": "ADBE Vector Graphic - Fill",
                        "nm": "Fond 1",
                        "o": Object {
                          "a": 0,
                          "ix": 5,
                          "k": 100,
                        },
                        "r": 1,
                        "ty": "fl",
                      },
                      Object {
                        "a": Object {
                          "a": 0,
                          "ix": 1,
                          "k": Array [
                            0,
                            0,
                          ],
                        },
                        "nm": "Transformer ",
                        "o": Object {
                          "a": 0,
                          "ix": 7,
                          "k": 100,
                        },
                        "p": Object {
                          "a": 0,
                          "ix": 2,
                          "k": Array [
                            -2.04,
                            1.659,
                          ],
                        },
                        "r": Object {
                          "a": 0,
                          "ix": 6,
                          "k": 0,
                        },
                        "s": Object {
                          "a": 0,
                          "ix": 3,
                          "k": Array [
                            100,
                            100,
                          ],
                        },
                        "sa": Object {
                          "a": 0,
                          "ix": 5,
                          "k": 0,
                        },
                        "sk": Object {
                          "a": 0,
                          "ix": 4,
                          "k": 0,
                        },
                        "ty": "tr",
                      },
                    ],
                    "ix": 1,
                    "mn": "ADBE Vector Group",
                    "nm": "Ellipse 1",
                    "np": 2,
                    "ty": "gr",
                  },
                ],
                "sr": 1,
                "st": 0,
                "ty": 4,
              },
            ],
            "markers": Array [],
            "nm": "icon_not_found",
            "op": 90.0000036657751,
            "v": "5.5.8",
            "w": 150,
          }
        }
        autoplay={true}
        loop={true}
        style={
          Object {
            "height": "13rem",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Search Results component When the component is rendered Should match snapshot - non empty state 1`] = `
<div
  className="results-container"
>
  <h2>
    Search results:
  </h2>
  <div
    className="results-content"
  >
    <div
      className="results-item"
    >
      <p>
        text
      </p>
    </div>
  </div>
</div>
`;

exports[`Search Results component When the component is rendered Should match snapshot - non empty state feeling lucky 1`] = `
<div
  className="results-container"
>
  <h2>
    Search results:
  </h2>
  <div
    className="results-content"
  >
    <div
      className="lucky-item"
    >
      <img
        alt="chuck norris icon"
        src={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "render": [Function],
          }
        }
      />
      <p>
        text
      </p>
    </div>
  </div>
</div>
`;
